css: Fix icon/screenshot uploader in WebKit browsers
WebKit doesn't allow uploading through file forms that are invisible.
Stuff them off-screen to trick WebKit into thinking they're being rendered,
instead. I hate web development.

--- a/sweettooth/static/css/sweettooth.css
+++ b/sweettooth/static/css/sweettooth.css
@@ -385,7 +385,12 @@ li.extension:last-child {
 }
 
 .extension .upload input {
-    display: none;
+    /* Hack: WebKit doesn't pop up the uploader
+     * for invisible input fields, so just stuff
+     * it off-screen.
+     */
+    position: absolute;
+    left: -9999em;
 }
 
 .extension .uninstall {
